--- a/data/authors/me.yaml
+++ b/data/authors/me.yaml
@@ -2,9 +2,9 @@ schema: hugoblox/author/v1
 slug: me
 is_owner: true
 name:
-  display: Dr. Alex Johnson
-  given: Alex
-  family: Johnson
+  display: Dr. Syed Ibrar Hussain
+  given: Syed Ibrar 
+  family: Hussain
   alternate: ''  # Example: 王伟
   pronunciation: ''  # Example: Wáng Wěi
   pronouns: he/him
@@ -15,81 +15,92 @@ status:
   icon: "☕️"
 role: Senior AI Research Scientist
 bio: |
-  Alex Johnson is a Senior AI Research Scientist at Meta AI. His research
-  has been published in top conferences like NeurIPS and ICML, with over
-  10,000 citations. Alex is passionate about pushing the boundaries of AI
-  while ensuring ethical development.
+  Ph.D. | AI Researcher | Deep Learning & Computer Vision | Medical Imaging | Generative Models (GANs, Diffusion, Transformers) 
+  | HPC (CUDA, SLURM)
+  Advancing resilient deep learning systems for complex visual data through architectural innovation and scalable optimization.
 
 affiliations:
-  - name: Meta AI
-    url: https://ai.meta.com/
+  - name: University of Palermo, Palermo, Italy
+    url: https://unipa.it/
 
 links:
   - icon: at-symbol
-    url: mailto:alex.johnson@example.com
+    url: syed.ibraras@gmail.com
     label: E-mail Me
   - icon: brands/x
     url: https://x.com/example
   - icon: brands/github
-    url: https://github.com/example
+    url: https://github.com/ibrar-syed
   - icon: brands/linkedin
-    url: https://www.linkedin.com/in/example/
+    url: https://www.linkedin.com/in/ibrar-syed
   - icon: academicons/google-scholar
-    url: https://scholar.google.com/citations?user=example
+    url: https://scholar.google.com/citations?user=HunitD0AAAAJ&hl=en
   - icon: academicons/orcid
-    url: https://orcid.org/0000-0002-1825-0097
+    url: https://orcid.org/0000-0002-9391-3858
 
 interests:
-  - Large Language Models
+  - Deep/MAchine Learning
   - Computer Vision
-  - Reinforcement Learning
-  - AI Ethics
+  - Medical Imaging
+  - Adaptive Learning Systems
 
 education:
   - degree: PhD Computer Science
-    institution: Stanford University
-    start: 2015-09-01
-    end: 2019-06-30
+    institution: University of Palermo, Palermo, Italy
+    start: 2021-01-11
+    end: 2025-02-27
     summary: |
-      Thesis on scaling laws for neural language models. Published 5 papers in NeurIPS and ICML.
+      Advanced Learning Algorithms with Optimized Pre-processing Techniques for Enhanced Diagnostic Performance in Medical Imaging
     button:
       text: Download dissertation
-      url: /resume.pdf
+      url: https://www.researchgate.net/publication/395030972_Advanced_Learning_Algorithms_with_Optimized_Pre-processing_Techniques_for_Enhanced_Diagnostic_Performance_in_Medical_Imaging
       icon: hero/arrow-down-tray
-  - degree: MS Computer Science
-    institution: Carnegie Mellon University
+  - degree: MS in Applied Mathematics
+    institution: University of Gujrat, Pakistan
+    start: 2017-10-20
+    end: 2019-09-30
+  - degree: BS in Mathematics and Computer Science
+    institution: University of Gujrat, Pakistan
     start: 2013-09-01
-    end: 2015-05-31
-  - degree: BS Computer Science
-    institution: MIT
-    start: 2009-09-01
-    end: 2013-05-31
+    end: 2017-10-30
 
 experience:
   - role: Senior AI Research Scientist
-    org: Meta AI
-    start: 2020-01-01
+    org: Fondazione RiMed, 
+    start: 2024-01-11
     summary: |
-      Leading research on multimodal AI systems. Contributed to Llama 2 and other open-source models.
+      - Developed multi-modal vision systems for anomaly detection in complex structures using volumetric imaging
+      - Implemented deep generative architectures (GANs, CNNs, Diffusion Networks) for precision recognition tasks
+      - Designed noise-robust preprocessing pipelines for MRI/PET, reducing artifacts.
+      - Created multi-task frameworks improving detection accuracy for overlapping morphological features
+      - Exploring explainable AI (XAI) methods to improve model transparency and critical decision systems.
+      - Collaborating with domain specialists to operationalize vision solutions in regulated environments
+      - Engaging in research and publications to advance AI applications in medical imaging.
     button:
       text: View portfolio
       url: /
       icon: hero/arrow-down-tray
-  - role: AI Research Intern
-    org: OpenAI
-    start: 2019-06-01
-    end: 2019-12-31
+  - role: Research Exchange Scholar
+    org: University of Houston, Houston, TX, USA
+    start: 2024-01-01
+    end: 2024-10-31
     summary: |
-      Worked on GPT-3 scaling. Co-authored paper on prompt engineering.
+      - Developed volumetric image preprocessing pipelines with artifact reduction, spatial normalization, and noise suppression
+      - Implemented signal enhancement techniques (FFT, adaptive filtering) for feature refinement in temporal-spatial data streams
+      - Designed ensemble-based prediction systems using Random Forests for complex pattern recognition tasks
+      - Architected Linux-based data processing workflows for large-scale dataset management (10TB+)
+      - Configured GPU-accelerated HPC environments for distributed deep learning (TensorFlow/PyTorch)
+      - Created multimodal fusion frameworks integrating imaging, signal, and contextual metadata
+      - Collaborated with cross-functional teams on computer vision and research is published in peer-reviewed journals.
 
 skills:
   - name: Technical Skills
     items:
       - label: Python
         level: 5
-      - label: Machine Learning
+      - label: Deep/Machine Learning
         level: 5
-      - label: Cloud Computing
+      - label: Medical Imaging
         level: 4
   - name: Research & Communication
     items:
@@ -97,20 +108,37 @@ skills:
         level: 5
       - label: Conference Presentations
         level: 4
-      - label: Grant Proposals
+      - label: Scientific Publications
         level: 4
 
 languages:
-  - name: English
+  - name: Urdu
     level: 5
     label: Native
-  - name: Spanish
-    level: 4
-    label: Fluent
+  - name: Punjabi
+    level: 5
+    label: Native
+  - name: English
+    level: 5
+    label: Advanced
+  - name: Italian
+    level: 3
+    label: Basic
 
 awards:
-  - title: Best Paper Award
-    awarder: NeurIPS
-    date: "2022-12-01"
-    summary: Awarded for groundbreaking work on efficient training of large models.
+  - title: Merit-Based Graduate Scholarship
+    awarder: University of Gujrat, Pakistan
+    date: "2016-10-01"
+    summary: Punjab Education Endowment Fund (Awarded to top 2% of students)
+    icon: hero/trophy
+
+  - title: Fully Funded PhD Scholarship 
+    awarder: University of Palermo
+    date: "2024-09-25"
+    icon: hero/trophy
+
+  - title: Graduate Gold Medalist in Applied Mathematics  
+    awarder: University of Gujrat, Pakistan
+    summary: Academic and Research Excellence Gold Medal | Top-ranked cohort graduate     
+    date: "2021-07-15"
     icon: hero/trophy
